--- a/config/example.runtime.properties
+++ b/config/example.runtime.properties
@@ -199,6 +199,31 @@ VitroConnection.DataSource.validationQuery = SELECT 1
 
 
 # -----------------------------------------------------------------------------
+# ORCID INTEGRATION
+# -----------------------------------------------------------------------------
+
+# orcid.clientId = 0000-0000-0000-000X
+# orcid.clientPassword = 00000000-0000-0000-0000-000000000000
+# orcid.webappBaseUrl = http://localhost:8080/vivo
+# orcid.messageVersion = 1.0.23
+# orcid.externalIdCommonName = VIVO Cornell Identifier
+
+# ---- Setup for the sandbox ----
+
+# orcid.publicApiBaseUrl     = http://pub.sandbox-1.orcid.org/v1.1
+# orcid.authorizedApiBaseUrl = http://api.sandbox-1.orcid.org/v1.1
+# orcid.oauthAuthorizeUrl    = http://sandbox-1.orcid.org/oauth/authorize
+# orcid.oauthTokenUrl        = http://api.sandbox-1.orcid.org/oauth/token
+
+# ---- or for the mockorcid webapp ----
+
+# orcid.publicApiBaseUrl     = http://localhost:8080/mockorcid/mock/
+# orcid.authorizedApiBaseUrl = http://localhost:8080/mockorcid/mock/
+# orcid.oauthAuthorizeUrl    = http://localhost:8080/mockorcid/mock/oauth/authorize
+# orcid.oauthTokenUrl        = http://localhost:8080/mockorcid/mock/oauth/token
+
+
+# -----------------------------------------------------------------------------
 # OTHER OPTIONS
 # -----------------------------------------------------------------------------
 
