VIVO-773 create the RDB to TDB migration utility.

--- a/build.xml
+++ b/build.xml
@@ -133,5 +133,15 @@
 			<fileset dir="${testApp.source.dir}" />
 		</sync>
 	</target>
+	
+	<!-- ================================= 
+          target: migrateConfigurationModels              
+         ================================= -->
+    <target name="migrateConfigurationModels" description="description">
+    	<dirname property="nihvivobase.dir" file="${ant.file.nihvivo}" />
+    	<property name="rdbmigration.dir" location="${nihvivobase.dir}/utilities/rdbmigration" />
+        <ant dir="${rdbmigration.dir}" target="all"></ant>
+    </target>
+
 
 </project>
