VIVO-801 Added some flexibility to the RDB migration.
The tool now detects if you have additional RDB models, and offers the option of skipping them.
Also, the tool runs with 2G of memory.

--- a/utilities/rdbmigration/build.xml
+++ b/utilities/rdbmigration/build.xml
@@ -125,6 +125,8 @@
 			<arg value="${VitroConnection.DataSource.url}" />
 			<arg value="${VitroConnection.DataSource.username}" />
 			<arg value="${VitroConnection.DataSource.password}" />
+			<jvmarg value="-Xms512m"/>
+			<jvmarg value="-Xmx2048m"/>
 			<classpath refid="migrate.run.classpath" />
 		</java>
 	</target>
