--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /ontology/public/catalog-v0001.xml
 
 rdf/auth/firsttime/test-user-model.owl
+utilities/solrtester/.work
+utilities/rdbmigration/.work
