Continue to reduce the Model Madness!
Add OntModelCache to the top of the stack of RDF data structures.
Add DataStructuresProvider to the bottom of the stack.
Redesign ModelAccess method signatures.
Create the ShowSources page.
Remove RequestModelsPrep, except for setting the Collator.
Reduce the complexity of ContentModelsSetup and ConfigurationModelsSetup.

VIVO-225 VIVO-819 VIVO-820 VIVO-821 VIVO-823 VIVO-832

--- a/productMods/WEB-INF/web.xml
+++ b/productMods/WEB-INF/web.xml
@@ -703,6 +703,15 @@
   </servlet-mapping>
 
   <servlet>
+    <servlet-name>ShowRDFSources</servlet-name>
+    <servlet-class>edu.cornell.mannlib.vitro.webapp.controller.admin.ShowSourcesController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ShowRDFSources</servlet-name>
+    <url-pattern>/admin/showSources</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
     <servlet-name>StartupStatus</servlet-name>
     <servlet-class>edu.cornell.mannlib.vitro.webapp.controller.admin.StartupStatusController</servlet-class>
   </servlet>
