Example ORCID setup was out of date.

--- a/config/example.runtime.properties
+++ b/config/example.runtime.properties
@@ -210,10 +210,10 @@ VitroConnection.DataSource.validationQuery = SELECT 1
 
 # ---- Setup for the sandbox ----
 
-# orcid.publicApiBaseUrl     = http://pub.sandbox-1.orcid.org/v1.1
-# orcid.authorizedApiBaseUrl = http://api.sandbox-1.orcid.org/v1.1
-# orcid.oauthAuthorizeUrl    = http://sandbox-1.orcid.org/oauth/authorize
-# orcid.oauthTokenUrl        = http://api.sandbox-1.orcid.org/oauth/token
+# orcid.publicApiBaseUrl     = http://pub.sandbox.orcid.org/v1.1
+# orcid.authorizedApiBaseUrl = http://api.sandbox.orcid.org/v1.1
+# orcid.oauthAuthorizeUrl    = http://sandbox.orcid.org/oauth/authorize
+# orcid.oauthTokenUrl        = http://api.sandbox.orcid.org/oauth/token
 
 # ---- or for the mockorcid webapp ----
 
