VIVO-906 Assemble application at runtime.
Create an object to represent VitroHomeDirectory
Instantiate TripleSources, FileStorage, etc, based on the config file.

--- a/build.xml
+++ b/build.xml
@@ -75,6 +75,7 @@
 			<include name="languages/**/*" />
 			<include name="config/*.properties" />
 			<include name="config/*.txt" />
+			<include name="config/*.n3" />
 			<include name="config/jarlist/*.txt" />
 			<include name="config/solr/*" />
 			<include name="context.xml" />
