VIVO-922: update web.xml for new faux listing controller

--- a/productMods/WEB-INF/web.xml
+++ b/productMods/WEB-INF/web.xml
@@ -820,6 +820,15 @@
   </servlet-mapping>
 
   <servlet>
+    <servlet-name>ListFauxPropertiesController</servlet-name>
+    <servlet-class>edu.cornell.mannlib.vitro.webapp.controller.freemarker.ListFauxPropertiesController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ListFauxPropertiesController</servlet-name>
+    <url-pattern>/listFauxProperties</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
     <servlet-name>ShowDataPropertyHierarchyController</servlet-name>
     <servlet-class>edu.cornell.mannlib.vitro.webapp.controller.freemarker.ShowDataPropertyHierarchyController</servlet-class>
   </servlet>
