Update the example

--- a/example.build.properties
+++ b/example.build.properties
@@ -20,7 +20,7 @@
   # setting to point elsewhere in development environments).
   #   Examples:
   #      vitro.core.dir = ./vitro-core
-  #      vitro.core.dir = ../vitro
+  #      vitro.core.dir = ../Vitro
   #      vitro.core.dir = /usr/local/vitro/trunk
 vitro.core.dir = ./vitro-core
 
