--- a/config/example.runtime.properties
+++ b/config/example.runtime.properties
@@ -217,6 +217,34 @@ VitroConnection.DataSource.validationQuery = SELECT 1
 # OTHER OPTIONS
 # -----------------------------------------------------------------------------
 
+   # AltMetric badges
+   # ----------------
+   # Options to embed AltMetric badges on information resource (e.g. journal article) pages
+   # See the AltMetric documentation for more imformation about each option: http://api.altmetric.com/embeds.html
+   # The embed code will use a DOI, or PubMed ID, if present
+
+   # Enable AltMetric badges
+resource.altmetric=enabled
+
+   # Display the badge to the left or right of the title (default = right)
+   # Options: left, right
+#resource.altmetric.displayto=right
+
+   # Badge type to display (default = donut)
+   # Options: See AltMetric documentation - recommended settings: donut, medium-donut
+#resource.altmetric.badge-type=donut
+
+   # Hide the badge if there are no mentions (default = true)
+   # Options: true, false
+#resource.altmetric.hide-no-mentions=true
+
+   # Display more details about the score when you hover over the badge (default = right)
+   # Options, right, left, up, down
+#resource.altmetric.badge-popover=right
+
+   # Dsiplay extended details alongside the badge (default = none)
+#resource.altmetric.badge-details=right
+
   #  
   # When the following flag is set to enabled, the VIVO home page displays a 
   # global map highlighting the geographical focus of foaf:person individuals. 
