--- a/config/example.runtime.properties
+++ b/config/example.runtime.properties
@@ -224,7 +224,8 @@ VitroConnection.DataSource.validationQuery = SELECT 1
    # The embed code will use a DOI, or PubMed ID, if present
 
    # Enable AltMetric badges
-resource.altmetric=enabled
+   # Uncomment and set this to disabled if you don't want AltMetric badges
+#resource.altmetric=disabled
 
    # Display the badge to the left or right of the title (default = right)
    # Options: left, right
@@ -318,9 +319,9 @@ visualization.temporal = enabled
   # modern browser.
   # Currently, it is not possible to choose between them from the UI. You can choose to either have
   # the Flash visualizations, OR the D3 visualizations.
-  # If this option is not present or set to disabled, then the Flash visualizations will be used.
-  # If this option is present and set to enabled, then the D3 visualizations will be used.
-visualization.d3 = enabled
+  # If this option is not present or set to enabled, then the D3 visualizations will be used.
+  # If this option is present and set to disabled, then the Flash visualizations will be used.
+#visualization.d3 = disabled
 
   #
   # Types of individual for which we can create proxy editors.
