--- a/installer/home/pom.xml
+++ b/installer/home/pom.xml
@@ -40,6 +40,27 @@
                 </executions>
             </plugin>
             <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <executions>
+                    <execution>
+                        <id>install</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${home-dir}</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${project.build.directory}/${project.build.finalName}</directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <artifactId>maven-install-plugin</artifactId>
                 <version>2.5.2</version>
                 <configuration>
@@ -52,7 +73,7 @@
     <dependencies>
         <dependency>
             <groupId>org.vivoweb</groupId>
-            <artifactId>vitro-home</artifactId>
+            <artifactId>vivo-home</artifactId>
             <version>1.9.0-SNAPSHOT</version>
             <type>tar.gz</type>
         </dependency>
