--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -26,12 +26,13 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
+                    <packagingExcludes>WEB-INF/lib/*.jar</packagingExcludes>
+                    <archiveClasses>false</archiveClasses>
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
-                    <archiveClasses>false</archiveClasses>
                     <overlays>
                         <overlay>
                             <groupId>org.vivoweb</groupId>
@@ -40,11 +41,6 @@
                         </overlay>
                     </overlays>
                 </configuration>
-                <executions>
-                    <execution>
-                        <phase>prepare-package</phase>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
