--- a/api/pom.xml
+++ b/api/pom.xml
@@ -19,10 +19,46 @@
 
     <name>VIVO API</name>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.4.2</version>
+                <configuration>
+                    <artifactSet>
+                        <includes>
+                            <include>org.vivoweb:vitro-api</include>
+                        </includes>
+                    </artifactSet>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <!-- promoteTransitiveDependencies>true</promoteTransitiveDependencies>
+                    <shadedArtifactAttached>true</shadedArtifactAttached>
+                    <shadedClassifierName>shaded</shadedClassifierName>
+                    <useBaseVersion>true</useBaseVersion -->
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.vivoweb</groupId>
             <artifactId>vitro-api</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.vivoweb</groupId>
+            <artifactId>vitro-dependencies</artifactId>
+            <version>1.9.0-SNAPSHOT</version>
+            <type>pom</type>
         </dependency>
 
         <dependency>
