--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>api</module>
         <module>webapp</module>
         <module>home</module>
+        <module>installer</module>
     </modules>
 
     <profiles>
