Placeholder for themes, allow theme to be defined in project settings

--- a/installer/home/pom.xml
+++ b/installer/home/pom.xml
@@ -19,6 +19,10 @@
 
     <name>VIVO Prepare Home</name>
 
+    <properties>
+        <default-theme>wilma</default-theme>
+    </properties>
+
     <profiles>
         <profile>
             <id>install</id>
