--- a/installer/webapp/pom.xml
+++ b/installer/webapp/pom.xml
@@ -76,7 +76,7 @@
                                 </goals>
                                 <configuration>
                                     <tasks>
-                                        <delete dir="${tomcat-dir}/webapps/${build.finalName}" />
+                                        <delete dir="${tomcat-dir}/webapps/${project.build.finalName}" />
                                     </tasks>
                                 </configuration>
                             </execution>
@@ -101,7 +101,7 @@
                                             <version>${project.version}</version>
                                             <type>war</type>
                                             <overWrite>true</overWrite>
-                                            <outputDirectory>${tomcat-dir}/webapps/${build.finalName}</outputDirectory>
+                                            <outputDirectory>${tomcat-dir}/webapps/${project.build.finalName}</outputDirectory>
                                         </artifactItem>
                                     </artifactItems>
                                 </configuration>
