Fix broken URLs in runtime.properties, use tiny links

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -250,7 +250,7 @@ VitroConnection.DataSource.validationQuery = SELECT 1
   # When the following flag is set to enabled, the VIVO home page displays a 
   # global map highlighting the geographical focus of foaf:person individuals. 
   # For information on the maps, refer to this wiki page:
-  # https://wiki.duraspace.org/display/VIVO/Home+Page+Customizations#HomePageCustomizations-TheGeographicFocusMap
+  # https://wiki.duraspace.org/x/c4XVAw
   #
 #homePage.geoFocusMaps=enabled
 
@@ -262,7 +262,7 @@ VitroConnection.DataSource.validationQuery = SELECT 1
   # that captures images of web pages or to use an existing service outside of VIVO. 
   # 
   # For more information on implementing multiple profile pages, refer to this 
-  # wiki page: https://wiki.duraspace.org/display/VIVO/Multiple+foaf%3APerson+Profile+Pages.
+  # wiki page: https://wiki.duraspace.org/x/doXVAw
   #
 #multiViews.profilePageTypes=enabled
 
@@ -272,7 +272,7 @@ VitroConnection.DataSource.validationQuery = SELECT 1
   # profile pages that it creates. 
   #
   # For more information, see this wiki page: 
-  # https://wiki.duraspace.org/display/VIVO/Use+HTTP+caching+to+improve+performance
+  # https://wiki.duraspace.org/x/5sQQAg
   #
   # Developers will likely want to leave caching disabled, since a change to a
   # Freemarker template or to a Java class would not cause the page to be 
@@ -333,7 +333,7 @@ proxy.eligibleTypeList = http://xmlns.com/foaf/0.1/Person, http://xmlns.com/foaf
   # Default type(s) for Google Refine Reconciliation Service
   # The format for this property is id, name; id1, name1; id2, name2 etc.
   # For more information, see Service Metadata from this page:
-  # http://code.google.com/p/google-refine/wiki/ReconciliationServiceApi
+  # https://github.com/OpenRefine/OpenRefine/wiki/Reconciliation-Service-Api
   # 
 Vitro.reconcile.defaultTypeList = http://vivoweb.org/ontology/core#Role, core:Role; \
     http://vivoweb.org/ontology/core#AcademicDegree, core:Academic Degree; \
