--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -40,6 +40,12 @@
                             <type>war</type>
                         </overlay>
                     </overlays>
+                    <webResources>
+                        <resource>
+                            <directory>src/main/webResources</directory>
+                            <filtering>true</filtering>
+                        </resource>
+                    </webResources>
                 </configuration>
             </plugin>
         </plugins>
